<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pic1"
    tools:content="login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="496dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MultiWay Login"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_alternate_email_24"
                android:hint="Email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_content_paste_off_24"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="30dp"
                android:text="Log In"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="Your first time here? Sign up"
                android:textColor="@color/lavender" />

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember Me"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>