<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pic3"
    tools:content="signup">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="715dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MultiWay Sign Up"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_boy_24"
                android:hint="Name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_email_24"
                android:hint="Email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_alternate_email_24"
                android:hint="Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_content_paste_off_24"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <CheckBox
                android:id="@+id/privacy_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="I agree to the Privacy Policy"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/privacy_policy_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Read Privacy Policy"
                android:textColor="@color/lavender"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacypolicytext"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scrollbars="vertical"
                android:text="MultiWay collects your email, name, and password only for account creation and use in the app.\n\nWe assure you that your data is stored securely and will not be shared with any third parties.\n\nYour data will be deteted at your request by contacting us.\n\nBy signing up to MultiWay, you consent to the use of your data in accordance with this policy."
                android:padding="8dp"
                android:visibility="gone"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>


            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="Sign Up"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="You've been here before? Log in Here"
                android:textColor="@color/lavender" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>