<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="53.3498"
        mapbox:mapbox_cameraTargetLng="-6.2603"
        mapbox:mapbox_cameraZoom="13" >


    </com.mapbox.maps.MapView>

    <TextView
        android:id="@+id/pubCrawlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="🍻 This feature is over 18's only, please drink and travel responsibly!"
        android:textStyle="bold"
        android:visibility="gone"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="250dp"
        android:elevation="8dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="vertical"
            android:padding="16dp">
            <Button
                android:id="@+id/btnFetchSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Suggest Places"
                android:background="@color/white"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:alignmentMode="alignMargins"
                android:padding="8dp"
                android:columnOrderPreserved="true">

                <Button
                    android:id="@+id/radiusButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    android:text="Select Radius" />

                <Button
                    android:id="@+id/moodButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    android:text="Select Mood" />

                <Button
                    android:id="@+id/toggleChipsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="2"
                    android:text="Toggle Route Types" />
            </GridLayout>



            <com.google.android.material.chip.ChipGroup
                android:id="@+id/routeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPubCrawl"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="Pub Crawl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRomantic"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="Romantic Walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="Family Day Out" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSolo"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Solo Exploring" />
            </com.google.android.material.chip.ChipGroup>





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
