<resources>
    <string name="app_name">MultiWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoiam10MTIzNCIsImEiOiJjbTZ6OWZxYTQwMXM3Mm1xc3BmZDN5ZDg4In0.0355gSN16qHfxbqWpZxHCw</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button">Button</string>
    <string name="button1">Button1</string>
    <string name="signup" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_places">Search for places</string>

    <string-array name="party_types">
        <item>Party</item>
        <item>Solo</item>
        <item>Couple</item>
        <item>Friends</item>
        <item>Family</item>
        <item>Travellers</item>
    </string-array>

    <string-array name="moods">
        <item>Chill Afternoon</item>
        <item>Party Night</item>
        <item>Solo Exploring</item>
        <item>Romantic Evening</item>
    </string-array>


    <string-array name="route_types">
        <item>None</item>
        <item>Romantic Walk</item>
        <item>Family Day Out</item>
        <item>Solo Exploring</item>
        <item>Pub Crawl</item>
    </string-array>

    <string-array name="category_list">
        <item>All</item>
        <item>Shopping</item>
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Bar</item>
        <item>Pubs</item>
        <item>Park</item>
        <item>Hotel</item>
        <item>Tourist Attractions</item>
    </string-array>
</resources>